--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "body-parser": "^1.19.0",
-    "expo": "~39.0.0",
+    "expo": "^39.0.3",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
     "react": "~16.13.0",
