--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "~16.13.0",
     "react-dom": "~16.13.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
+    "react-native-background-color": "0.0.8",
     "react-native-web": "0.13.13"
   },
   "devDependencies": {
