--- a/package.json
+++ b/package.json
@@ -1,24 +1,46 @@
 {
+  "name": "almaher",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "expo": "^39.0.3",
-    "express": "^4.17.1",
-    "mysql": "^2.18.1",
-    "react": "~16.13.0",
-    "react-dom": "~16.13.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
-    "react-native-background-color": "0.0.8",
-    "react-native-web": "0.13.13"
-  },
-  "devDependencies": {
-    "@babel/core": "7.9.0"
+    "@restart/hooks": "^0.3.25",
+    "@testing-library/jest-dom": "^5.11.5",
+    "@testing-library/react": "^11.1.1",
+    "@testing-library/user-event": "^12.2.0",
+    "bootstrap": "^4.5.3",
+    "jquery": "^1.12.4",
+    "popper.js": "^1.16.1",
+    "react": "^16.14.0",
+    "react-bootstrap": "^1.4.0",
+    "react-dom": "^16.14.0",
+    "react-scripts": "4.0.0",
+    "reactstrap": "^8.7.1",
+    "tsutils": "^3.17.1",
+    "typescript": "^4.0.5",
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo web",
-    "eject": "expo eject"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "private": true
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
