--- a/package.json
+++ b/package.json
@@ -3,16 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
     "@restart/hooks": "^0.3.25",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
+    "apollo-boost": "^0.4.9",
     "bootstrap": "^4.5.3",
-    "jquery": "^1.12.4",
+    "graphql": "^15.5.0",
+    "hijri-date-picker": "^1.2.1",
+    "jquery": "^3.5.1",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.32",
     "popper.js": "^1.16.1",
-    "react": "^16.14.0",
     "react-bootstrap": "^1.4.0",
-    "react-dom": "^16.14.0",
+    "react-data-export": "^0.6.0",
+    "react-datepicker": "^3.4.1",
+    "react-dom": "^16.9.0",
+    "react-moment": "^1.1.1",
     "react-scripts": "4.0.0",
     "reactstrap": "^8.7.1",
     "tsutils": "^3.17.1",
@@ -42,5 +50,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react": "^16.9.0",
+    "xxxxx": "^1.0.3"
   }
 }
